@@ -29,9 +29,6 @@ repositories {
 }
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-    }
     withJavadocJar()
     withSourcesJar()
 }
@@ -44,38 +41,49 @@ tasks.withType<Javadoc> {
     options.encoding = "UTF-8"
 }
 
+val mockitoAgent = configurations.create("mockitoAgent")
+
 dependencies {
     api(libs.jakarta.annotation.api)
     api(libs.org.apache.commons.commons.compress)
 
     implementation(libs.slf4j.api)
 
-    testImplementation(platform(libs.junit.bom))
-
-    testImplementation(libs.assertj.core)
-    testImplementation(libs.junit.jupiter)
-    testImplementation(libs.junit.jupiter.params)
-    testImplementation(libs.logback.classic)
-    testImplementation(libs.mockito.core)
-    testImplementation(libs.mockito.jupiter)
-
-    testRuntimeOnly(libs.junit.platform.launcher)
+    testFixturesApi(libs.logback.classic)
 
     testFixturesImplementation(platform(libs.junit.bom))
-
     testFixturesImplementation(libs.assertj.core)
+    testFixturesImplementation(libs.jackson.databind)
     testFixturesImplementation(libs.junit.jupiter)
-    testFixturesApi(libs.logback.classic)
+    testFixturesImplementation(libs.mockito.core)
+
+    mockitoAgent(libs.mockito.core) { isTransitive = false }
 }
 
-tasks.test {
-    useJUnitPlatform()
+tasks.withType<Test> {
+    jvmArgs(
+        "-javaagent:${mockitoAgent.asPath}",
+        "--add-opens=java.base/java.util.zip=ALL-UNNAMED"
+    )
 }
 
 testing {
     suites {
         val test by getting(JvmTestSuite::class) {
             useJUnitJupiter()
+
+            dependencies {
+                implementation(platform(libs.junit.bom))
+
+                implementation(libs.assertj.core)
+                implementation(libs.junit.jupiter)
+                implementation(libs.junit.jupiter.params)
+                implementation(libs.logback.classic)
+                implementation(libs.mockito.core)
+                implementation(libs.mockito.jupiter)
+
+                runtimeOnly(libs.junit.platform.launcher)
+            }
         }
 
         register<JvmTestSuite>("integrationTest") {
@@ -146,6 +154,10 @@ spotless {
         removeUnusedImports()
         trimTrailingWhitespace()
         endWithNewline()
+    }
+    format("javaMisc") {
+        target("src/**/package-info.java")
+        licenseHeaderFile(rootProject.file(".config/spotless/copyright.java.txt"), "\\/\\*\\*|@Nonnull\\npackage |package ")
     }
 }
 
